--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Karenina Blue
 description: BioHack Academy blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: [Karenina Blue 6 januari 2021-61.2.jpg]
 
 #
 # Flags below are optional
